@@ -1,9 +1,10 @@
 v1.2.0
 - Added Macro module
-- Code Cleanup and fixing
-- Correct some spelling mistakes in the Spanish Translation
+- Now the modules could be sorted, for example move UP or DOWN in the list
+- Code Cleanup and fixing (Warning this may broke some things, sorry about that)
 - Splitting professions to a separate module
 - For consistence all searches works with the icon + enter/escape system
+- Correct some spelling mistakes in the Spanish Translation
 v1.1.3
 - Spell Module : Fix an error when the player has not all professions
 v1.1.2
